[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Levels/bricks/brick_block.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Levels/BreakableBrick.gd" type="Script" id=2]
[ext_resource path="res://Assets/Levels/bricks/brick_bit.jpg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 65 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.5, 65.5 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 100, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 50, 0 )
spread = 0.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 197.89
initial_velocity_random = 0.49
angular_velocity = 16.27
angular_velocity_random = 0.31
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="BreakableBrick" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 11

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 0.5, -0.5 )
shape = SubResource( 2 )

[node name="BreakingTimer" type="Timer" parent="."]
one_shot = true

[node name="RebuildTimer" type="Timer" parent="."]
one_shot = true

[node name="BreakingBricks" type="Particles2D" parent="."]
position = Vector2( -5, -3 )
emitting = false
amount = 30
lifetime = 1.5
one_shot = true
speed_scale = 2.04
explosiveness = 1.0
randomness = 0.36
fixed_fps = 60
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BreakingTimer" to="." method="_on_BreakingTimer_timeout"]
[connection signal="timeout" from="RebuildTimer" to="." method="_on_RebuildTimer_timeout"]
